# nlink

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-linux.sh  build-windows.ps1
.claude/: settings.local.json
NSIGII_GPS_Relay/: README.md  index.html
__tests__/: CMakeLists.txt
__tests__/intergrations/: test_cli_intergration.c  test_intergration.c
__tests__/unit/cli/: CMakeLists.txt
__tests__/unit/core/: CMakeLists.txt
__tests__/unit/core/pattern/: matcher_test.c  test_param_extraction.c
cmake/: BuildSystem.cmake  ComponentSystem.cmake  Hooks.cmake  NexusLinkConfig.cmake.in  PackageConfig.cmake  TestFramework.cmake  Utils.cmake
docs/: TACIT_PLAN.md
docs/guides/: intergtaraion_guide.md
docs/nlnk_scripting_system/: nlink_script.md
docs/pattern_matching/: README.md  regex_patterns.md  wildcard_patterns.md
docs/token_system/: README.md  token_system_diagram.md
docs/unif/: NexusLink OVerview.md
docs/usage/: NLINK.md
examples/pattern_matching/: example.nlink
include/: fnmatch.h
include/nlink/cli/: cli.h  command.h  command_params.h  command_registration.h  command_registry.h  command_router.h  parse.h  regex_matcher.h
include/nlink/cli/commands/: load.h  minimal.h  minimize.h  pipeline.h  version.h  version_utils.h
include/nlink/core/common/: command.h  lazy_legacy.h  lazy_versioned.h  nexus_core.h  nexus_error.h  nexus_exception.h  nexus_json.h  nexus_lazy_versioned.h  nexus_loader.h  nexus_result.h  result.h  types.h
include/nlink/core/config/: config_pipeline.h  config_validator.h
include/nlink/core/metadata/: enhanced_metadata.h  metadata.h
include/nlink/core/minimizer/: automaton.h  nexus_automaton.h  nexus_minimizer.h  okpala_ast.h  okpala_automaton.h  okpala_minimizer.h
include/nlink/core/mpsystem/: mps_config.h  mps_dependency.h  mps_lifecycle.h  mps_pipeline.h  mps_stream.h
include/nlink/core/pattern/: matcher.h  regex_compat.h
include/nlink/core/pattern_matching/: pattern_matcher.h  regex_matcher.h  wildcard_matcher.h
include/nlink/core/pipeline/: nlink_pipeline.h  pipeline_detect.h  pipeline_pass.h  pipeline_stage.h
include/nlink/core/spsystem/: sps_config.h  sps_dependency.h  sps_lifecycle.h  sps_pipeline.h  sps_stream.h
include/nlink/core/symbols/: nexus_symbols.h  nexus_versioned_symbols.h  registry.h  symbols.h
include/nlink/core/tactic/: aggregation.h  composition.h  identity.h
include/nlink/core/tatit/: abstraction.h  composition.h  tactic.h  transformation.h  traversal.h
include/nlink/core/token/: nlink_token_system.h  token_structure.h  token_type.h  token_value.h  type.h
include/nlink/core/versioning/: lazy_versioned.h  nexus_lazy_versioned.h  nexus_missing.h  nexus_version.h  nlink.h  semver.h  versioned_symbols.h
scripts/: fix_nlink_includes.sh  remove_invalid_includes.py  standardize_nlink_includes.py
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  cli.c  command.c  command_params.c  command_registration.c  command_registry.c  command_router.c  main.c  parse.c
src/cli/commands/: CMakeLists.txt  README.md  load.c  minimal.c  minimize.c  parse.c  pipeline.c  version.c  version_utils.c
src/core/: CMakeLists.txt  nlink.c
src/core/common/: CMakeLists.txt  nexus_core.c  nexus_error.c  nexus_exception.c  nexus_json.c  nexus_loader.c  nexus_result.c  result.c  types.c
src/core/config/: CMakeLists.txt  config_pipeline.c  config_validator.c
src/core/metadata/: CMakeLists.txt  enhanced_metadata.c  metadata.c
src/core/minimizer/: CMakeLists.txt  minimizer.c  nexus_automaton.c  okpala_ast.c  okpala_automaton.c  okpala_automaton_minimzer.c
src/core/mpsystem/: CMakeLists.txt  mps_config.c  mps_dependency.c  mps_lifecycle.c  mps_pipeline.c  mps_stream.c
src/core/parser/: CMakeLists.txt  parser.c  parser.h
src/core/pattern/: CMakeLists.txt  matcher.c  regex_matcher.c
src/core/pattern_matching/: CMakeLists.txt  pattern_matcher.c  regex_matcher.c  wildcard_matcher.c
src/core/pipeline/: CMakeLists.txt  nlink_pipeline.c  pipeline_detector.c  pipeline_pass.c  pipeline_stage.c
src/core/schema/: CMakeLists.txt  nlink_schema.json
src/core/spsystem/: CMakeLists.txt  sps_config.c  sps_dependency.c  sps_lifecycle.c  sps_pipeline.c  sps_stream.c
src/core/symbols/: CMakeLists.txt  cold_symbol.c  nexus_symbols.c  symbols.c  versioned_symbols.c
src/core/tactic/: abstraction.c  composition.c  tactic.c  traversal.c
src/core/tatit/: CMakeLists.txt  aggregation.c  identity.c  tactic.c  transformation.c
src/core/token_type/: CMakeLists.txt  token_type.c  type.c
src/core/token_value/: CMakeLists.txt  nlink_token_system.c  token_value.c
src/core/tokenizer/: CMakeLists.txt  tokenizer.c  tokenizer.h
src/core/versioning/: CMakeLists.txt  lazy_versioned.c  missing_functions.c  nexus_version.c  semver.c
templates/: nlink.h.in  nlink_version.h.in
test/pattern_matching/: CMakeLists.txt  test_pattern_matcher.c
tests/framework/: test_stub_manager.c
tests/include/: nlink_test.h
tests/unit/core/common/: CMakeLists.txt
tests/unit/core/metadata/: CMakeLists.txt
tests/unit/core/minimizer/: CMakeLists.txt
tests/unit/core/mpsystem/: CMakeLists.txt
tests/unit/core/pattern/: CMakeLists.txt
tests/unit/core/pipeline/: CMakeLists.txt
tests/unit/core/spsystem/: CMakeLists.txt
tests/unit/core/symbols/: CMakeLists.txt
tests/unit/core/token/: test_token_system.c
tests/unit/core/versioning/: CMakeLists.txt
tools/dev/: setup.sh
